# Intelligent-KB-Retrieval

./: README.md
backend/: Dockerfile  app.py  config.py  config.yaml  connection_manager.py  docker-compose.yml  faiss_retriever.py  md_rag.py  pdf_generator.py  pyproject.toml  voice_rag_engine.py
frontend/: App.tsx  README.md  config.yaml  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: ChatSection.tsx  CitationModal.tsx  CreateIndexModal.tsx  LeftSidebar.tsx  LoginPage.tsx  Notification.tsx  SettingsModal.tsx  Sidebar.tsx  TopBar.tsx  VoiceAssistant.tsx
frontend/components/icons/: Icons.tsx
frontend/services/: apiService.ts
frontend/utils/: audioUtils.ts
